@@ -1,4 +1,4 @@
-use Test::More tests => 3;
+use Test::More;
 
 use v5.36;
 use Config::INI::Reader;
@@ -7,17 +7,19 @@ use Grizzly;
 
 my $newest_version = '0.111';
 
-my $config_hash    = Config::INI::Reader->read_file('dist.ini');
-my $config_version = $config_hash->{_}->{version};
+my $config_hash     = Config::INI::Reader->read_file('dist.ini');
+my $config_version  = $config_hash->{_}->{version};
+my $changes_version = '';
 
 my $changes_file = 'CHANGES';
 open( FH, $changes_file ) or die $!;
-my @changes_arr     = <FH>;
-my $changes_version = $changes_arr[0];
-$changes_version =~ s/^\s+|\s+$//g;
+my @changes_arr = <FH>;
 
-if ( $changes_version =~ /\b$newest_version\b/ ) {
-    $changes_version = $newest_version;
+foreach my $changes_arr (@changes_arr) {
+    if ( $changes_arr =~ /\b$newest_version\b/ ) {
+        $changes_version = $newest_version;
+        last;
+    }
 }
 
 is( $Grizzly::VERSION, $newest_version, 'compares $Grizzly::VERSION == $newest_version' );
@@ -27,3 +29,5 @@ is( $changes_version, $newest_version,
     'compares $changes_version == $newset_versionc' );
 
 close(FH);
+
+done_testing();
